<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:gravity="center_vertical"
            android:textColor="@color/terracotta"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/anagramInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_input_layout"
                android:hint="@string/input_hint"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                app:boxStrokeColor="@color/terracotta">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/anagramInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/text_input_min_height"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:maxLength="200"
                    android:padding="@dimen/padding_medium"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_between_fields"
                android:hint="@string/filter_hint"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                app:boxStrokeColor="@color/terracotta">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/anagramFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/text_input_min_height"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:maxLength="100"
                    android:padding="@dimen/padding_medium"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/resultTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_result_title"
                android:text="@string/result_label"
                android:textColor="@color/terracotta"
                android:textSize="@dimen/text_size_result_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/anagramResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/text_result_min_height"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/result_placeholder"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_result"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
